fix agent img croppped

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,8 @@ body {
 }
 
 .img-container {
+  height: 100vh;
+  width: 100vw;
   overflow-x: hidden;
 }
 
@@ -369,8 +371,9 @@ footer .btn:hover{
   /* Agent Header */
   #agentArt img{
     position: relative;
-    width: fit-content;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
   
   .agent-header-text{
